2000-11-08  Tristan Tarrant <nadir@users.sourceforge.net>

	* configure.in, tools/Makefile.am: only build the GIMP plugin if we
	  have GIMP > 1.1.26

2000-11-07  Tristan Tarrant <nadir@users.sourceforge.net>

	* configure.in: try harder to find ligimp/gimp.h
	* */Makefile.am: make libraries non-installable
	* tools/Makefile.am: don't try to install GIMP plugin if we haven't
	  built it
	* data/Makefile.am: install midisfx.flx
	* exult.spec.in: It now works (no devel package yet)

2000-11-07  Tristan Tarrant <nadir@users.sourceforge.net>

	* cheat.cc, cheat.h: implement set_enabled() which saves into config
	* exult.cc: the all-important about scroll (ctrl-v), resolution
	  things
	* game.cc: beginnings of setup menu
	* data/*.shp: some new shapes for the menu

2000-11-06  Tristan Tarrant <nadir@users.sourceforge.net>
	
	* font.cc, font.h: beginnings of independent font class and font 
	  manager
	* menulist.cc, menulist.h: menu implementation
	* txtscroll.cc, txtscroll.h: extracted from game.cc
        * game.cc: use font manager, implement Exult menu
	* exult.cc, gamewin.cc: clean up initialization sequence
	* vgafile.h: implemented extract_shape() in Vga_file, moved some 
	  methods from Shape_file to its parent class, because they should 
	  really be there.
	* data/meditown.mid: This is the MIDI I wanted to use for our menu
	* data/exult_logo.shp: Add dimmed frame
	* data/font.shp: Menu font
	* files/utils.h: Moved eqstr, hashstr in here so they can be shared

2000-11-05  Ryan Nunn <triforce@merlin.net.au>
	* audio/Midi.*: Changes so midi drivers other than Win_midiout can play SFX.
	* audio/xmidi.*: New midi conversion types
	* audio/Midi.cc: Music and SFX conversion options can be set in the config file
	  "config/audio/midi/convert" accepts none, gm or gs. Default GM
	  "config/audio/sfx/convert" accepts none or gs. Default GS

2000-11-05  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* actors.cc, cheat.cc, drag.cc, exult.cc, gameclk.cc, spells.cc: 